# full_pipeline_process

./: CMakeLists.txt  Config.cpp  Config.h  CudaMatrix.cu  CudaMatrix.h  DataSource.cpp  DataSource.h  GpuQueueManager.cu  GpuQueueManager.cuh  README.md  SendVideo.cpp  SendVideo.h  SharedQueue.cpp  SharedQueue.h  ThreadPool.cu  ThreadPool.h  WaveGroupProcessor.cu  WaveGroupProcessor.cuh  WaveGroupProcessor.h  config.json  kelnels.cu  kelnels.cuh  main.cpp  main.cu  main.h  myThreadPool.cu  myThreadPool.h  queue.cpp  queue.h  reader.cu  reader.h  utils.cu  utils.h  xdma_program.cpp  xdma_program.h  xdma_programe.cpp  xdma_programe.h
NRx/: MyStruct.h  NRxUdpSender.cpp  NRxUdpSender.h  SendVideo.h  azi_table.txt  plot.cpp  plot.h  sendVideo.cpp  stdafx.cpp  stdafx.h  udpSenderManager.cpp  udpSenderManager.h
NRx/dlls/debug/: RDRRecord_msvc64_D.lib  UdpReciever_msvc64_D.lib  UdpSender_msvc64_D.lib
NRx/dlls/release/: RDRRecord_msvc64.lib  UdpReciever_msvc64.lib  UdpSender_msvc64.lib
NRx/include/: NRxCrossPlatformFunc.cpp  NRxCrossPlatformFunc.h  NRxInterface.cpp  NRxInterface.h  NRxLinkedToRIB.h  NRxLogger.cpp  NRxLogger.h  NRxObj.h  NRxPIM.cpp  NRxPIM.h  NRxParamsMgr.h  NRxType.h  NRxUtile.h  RDRRecord.h  otherInterface.cpp  otherInterface.h
NRx/libs/include/timer/: Timer.cpp  Timer.h
matlab_simulate/: CompleteSimulationPipeline.m  areMareicesEqual.m  cfar.m  cfar2.m  cfar3.m  cfar4.m  getFileInfos.m  log_cfar.m  main.m  readBinaryIQFile.m  readtxt.m
